[metadata]
# replace with your username:
name = phstocks-bryan-t
version = 0.0.1
author = bryan-t
description = This contains utils used for getting ph stock data and machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryan-t/phstocks
project_urls =
	Bug Tracker = https://github.com/bryan-t/phstocks/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
